@@ -2086,13 +2086,10 @@ get_solid_keypoint(fastf_t *pt, char **strp, struct rt_db_internal *ip, fastf_t 
 		(struct rt_extrude_internal *)ip->idb_ptr;
 	    RT_EXTRUDE_CK_MAGIC( extr );
 
-	    if ( extr->skt )
-	    {
+	    if ( extr->skt && extr->skt->verts ) {
 		VJOIN2( mpt, extr->V, extr->skt->verts[0][0], extr->u_vec, extr->skt->verts[0][2], extr->v_vec );
 		*strp = "V1";
-	    }
-	    else
-	    {
+	    } else {
 		VMOVE( mpt, extr->V );
 		*strp = "V";
 	    }
