@@ -14,6 +14,7 @@ changes made.  See document footer for additional details.
 --- 2008-06-XX  Release 7.12.5                                     ---
 ----------------------------------------------------------------------
 
+* fixed bugs handling invalid extrude objects - Sean Morrison
 * fixed dependency bug in library pkg-config files - Sean Morrison
 * platform installers use consistent naming conventions- Sean Morrison
 * added -C color option to the mged 'E' command - Bob Parker
